@@ -48,6 +48,11 @@ module ActiveMerchant #:nodoc:
       end
 
       def store(credit_card, options={})
+        # The store request requires a currency and amount of at least $1 USD.
+        # This is used for an authorization that is handled internally by Paymill.
+        options[:currency] = 'USD'
+        options[:money] = 100
+
         save_card(credit_card, options)
       end
 
